[package]
name = "inverted_index"
version = "0.1.0"
authors = ["Tim Kuehn <timothy.j.kuehn@gmail.com>"]
repository = "https://github.com/tikue/inverted_index"
keywords = ["inverted", "index", "search", "postings", "information", "retrieval", "ir"]
license = "MIT"

[dependencies]
itertools = "*"
ic-cdk = "0.5.1"
candid = "0.7.14"
serde = "1.0"